# BestWayDiploma

./: .env.example  .gitignore  docker-compose.yml
BestWay/: .gitignore  Dockerfile  README.md  bestway_dump.sql  docker-compose.local.yml  docker-compose.yml  dump-bestway-202605041810.sql  dump-bestway-202605041811  dump-bestway-202605041812.sql  pyproject.toml  requirements.txt
BestWay/.github/workflows/: main.yml
BestWay/config/: nginx-local.conf
BestWay/migrations/versions/: 2025_03_23_0136-8a9875b37b70_initial_migrations.py  2025_03_26_1525-8b67473ec1b7_add_photo_table.py  2025_03_28_1900-cda064f87cea_add_json_data_fields.py  2025_03_29_2235-be45aae4434f_fix_place_city_field.py  2025_03_30_2227-aacc6933f1d3_changed_place_coordinates_field_type.py  2025_04_22_1455-999257ab61fe_add_route_type_city_and_is_custom.py  2025_04_25_1843-852a06ad0e4b_add_route_photo.py  2025_04_27_1459-d4e362f3106f_add_users_survey_model.py  2025_05_02_1956-d06b36da1f2d_add_users_gender_and_birhdate_fields.py  2025_05_09_0501-602793aa1055_add_survey_city_field.py  2025_05_10_1654-dc40a5094084_add_survey_places_data.py  2025_05_25_1543-2da9057e6b90_make_comments_and_like_for_routes_and_.py  2025_05_31_1528-f9fe395b1e42_fix_comments_and_likes_tables.py  2025_06_07_1302-8d840179587e_add_is_publicated_field_to_routes.py  2025_06_07_1658-18971a54629b_remove_photo_from_comment.py  2025_06_07_2045-0c7f4d13f13b_add_oid_to_places.py  2025_06_18_1045-8142f063a80c_add_survey_prompt_field.py  2025_07_17_1451-945fb7d52c72_add_place_description_field.py  2025_07_17_1506-bf54bb16421d_fix_user_birth_date_field.py  2025_08_25_1739-8aa0c9bd2ddc_add_description_field.py  2025_08_30_1540-c54b038d0305_create_posts_table.py  2025_08_30_1723-305004ecac53_add_post_id_field_to_comment_and_likes.py  2025_09_04_2049-37900156778b_add_place_model_website_field.py  2026_04_19_2149-d75bdc3f3554_.py
BestWay/src/: worker.py
BestWay/src/api/: __init__.py  dto.py  schemas.py
BestWay/src/api/admin/: comments.py  likes.py  places.py  posts.py  routes.py  schemas.py  surveys.py  users.py
BestWay/src/api/handlers/: comments.py  likes.py  places.py  posts.py  routes.py
BestWay/src/api/middlewares/: exceptions.py  get_jwt_token_user.py
BestWay/src/api/permissions/: is_admin.py
BestWay/src/api/public/: auth.py  comments.py  likes.py  places.py  posts.py  profile.py  routes.py  schemas.py  surveys.py
BestWay/src/application/: constants.py  events.py  exceptions.py  utils.py
BestWay/src/application/use_cases/: __init__.py
BestWay/src/application/use_cases/auth/: check_code.py  dto.py  phone_change.py  send_code.py
BestWay/src/application/use_cases/comments/: create.py  dto.py  edit.py  remove.py
BestWay/src/application/use_cases/common/: __init__.py  create.py  delete.py  dto.py  list.py  partial_update.py  retrieve.py  update.py
BestWay/src/application/use_cases/common/photo/: delete.py  photo.py  upload.py
BestWay/src/application/use_cases/likes/: create.py  dto.py  remove.py
BestWay/src/application/use_cases/models/: dto.py  field_values.py  select_field_values.py
BestWay/src/application/use_cases/places/: add_photos.py  avatar.py  create.py  dto.py  feed.py
BestWay/src/application/use_cases/posts/: create.py  dto.py  feed.py
BestWay/src/application/use_cases/routes/: avatar.py  chatgpt_create.py  copy.py  create.py  dto.py  enums.py
BestWay/src/application/use_cases/routes/feed/: list.py  retrieve.py
BestWay/src/application/use_cases/routes/places/: add.py  dto.py  remove.py  update_order.py
BestWay/src/application/use_cases/routes/public/: create.py
BestWay/src/application/use_cases/routes/route_places/: add.py
BestWay/src/application/use_cases/surveys/: create.py  delete.py  dto.py  list.py  retrieve.py  update.py
BestWay/src/application/use_cases/tasks/: route_generate.py
BestWay/src/application/use_cases/users/: create_user.py  delete_user.py  dto.py  photo.py  retrieve.py  update_user.py
BestWay/src/common/: dto.py  exceptions.py
BestWay/src/config/: app_factory.py  celery.py  containers.py  exceptions.py  loggers.py  settings.py
BestWay/src/domain/entities/: comment.py  dto.py  enums.py  like.py  photo.py  place.py  post.py  route.py  route_places.py  survey.py  user.py
BestWay/src/domain/validators/: __init__.py  base.py  dto.py  model_regex.py
BestWay/src/infrastructure/managers/: base.py  dto.py  enum.py  jwt_manager.py  local_storage.py  paginator.py  proxy_client.py  sms_client.py
BestWay/src/infrastructure/managers/ChatGPT/: base.py  constants.py  dto.py  places_tools.py  route_chatgpt_manager.py  utils.py
BestWay/src/infrastructure/models/alchemy/: __init__.py  base.py  posts.py  routes.py  surveys.py  users.py
BestWay/src/infrastructure/notifications/: base.py  notifier.py
BestWay/src/infrastructure/orm/: base.py
BestWay/src/infrastructure/permissions/: constants.py  decorators.py  dependencies.py  enums.py  exceptions.py
BestWay/src/infrastructure/redis/: base.py  init_redis_pool.py  redis_cache.py
BestWay/src/infrastructure/repositories/alchemy/: __init__.py  base.py  comments.py  db.py  likes.py  photos.py  places.py  posts.py  route_places.py  routes.py  survey.py  user.py
BestWay/src/infrastructure/repositories/interfaces/: __init__.py  base.py  comment.py  like.py  photo.py  place.py  post.py  route.py  route_places.py  survey.py  user.py
BestWay/src/infrastructure/repositories/interfaces/ChatGPT/: base.py
BestWay/src/infrastructure/tasks/: __init__.py  base.py  routes.py
BestWay/src/infrastructure/uow/: alchemy.py  base.py
BestayUI/: .lintstagedrc.json  README.md  auth.config.ts  auth.ts  commitlint.config.js  jest.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json
BestayUI/app/: globals.css  landing-motion.css  layout.tsx  page.tsx  robots.txt  sitemap.xml
BestayUI/app/_store/: app-store.ts  public-store.ts  ui-store.ts
BestayUI/app/components/: actions-dropdown-cell.tsx  auth-guard.tsx  (+35 more)
BestayUI/docs/: file-architecture.md
BestayUI/orm/: openapi.json
BestayUI/types/: global.d.ts  next-auth.d.ts
(+264 files in other folders)
